--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" routerLink="login">Login</a>
               </li>
               <li class="nav-item " style="float: right;">
                   <a class="nav-link" routerLink="register">Registration</a>
