--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,71 +4,68 @@
 			<h1>Sign up</h1>
 		</div>
 
-		<form id="member-registration" class="form-validate form-horizontal well" enctype="multipart/form-data">
+		<form [formGroup]="registerForm" (ngSubmit)="registerSubmitted()" id="member-registration" class="form-validate form-horizontal well" enctype="multipart/form-data">
 			<fieldset>
 				<legend>User Registration</legend>
 				<div class="form-group">
 					<label for="user">User *</label>
-					<input type="text" class="form-control" id="user" placeholder="Enter UserName">
+					<input type="text" class="form-control" id="user" placeholder="Enter UserName" formControlName="user">
+					<span *ngIf="user && user.invalid && user.touched" style="color: red;">Invalid User Name</span>
 					<br>
 				</div>
 				<div class="form-group">
 					<label for="name">Name *</label>
-					<input type="text" class="form-control" id="name" placeholder="Enter FullName">
+					<input type="text" class="form-control" id="name" placeholder="Enter FullName" formControlName="name">
+					<span *ngIf="name && name.invalid && name.touched" style="color: red;">Invalid Name</span>
 					<br>
 				</div>
 				<div class="form-group">
 					<label for="date">DOB *</label>
-					<input type="text" class="form-control" id="dob" placeholder="Enter Date Of Birth">
+					<input type="date" class="form-control" id="date" placeholder="Enter DOB in yyyy-mm-dd" formControlName="date">
+					<span *ngIf="date && date.invalid && date.touched" style="color: red;">Invalid  DOB</span>
 					<br>
 				</div>
 
 				<div class="form-group">
 					<label for="email">Email *</label>
-					<input type="email" class="form-control" id="email" placeholder="Enter Email">
+					<input type="email" class="form-control" id="email" placeholder="Enter Email" formControlName="email">
+					<span *ngIf="email && email.invalid && email.touched" style="color: red;">Invalid Email</span>
 					<br>
 
 				</div>
-				<div class="form-group">
+			   <!--<div class="form-group">
 					<label for="Phone">Phone *</label>
-					<input type="number" class="form-control" id="phone" placeholder="Enter Phone">
+					<input type="number" class="form-control" id="phone" placeholder="Enter Phone" formControlName="phone">
+					<span *ngIf="phone && phone.invalid && phone.touched" style="color: red;">Invalid Phone no.</span>
+					<br>
+
+				</div> --> 
+				<div class="form-group">
+					<label for="department">Gender *</label>
+					<input type="text" class="form-control" id="gender" placeholder="Enter gender" formControlName="gender">
+					<span *ngIf="gender && gender.invalid && gender.touched" style="color: red;">Invalid department</span>
+					<br>
+				</div>
+				  
+				  <div class="form-group">
+					<label for="department">Department *</label>
+					<input type="text" class="form-control" id="department" placeholder="Enter Department" formControlName="department">
+					<span *ngIf="department && department.invalid && department.touched" style="color: red;">Invalid department</span>
 					<br>
 
 				</div>
-				<div class="input-group mb-3">
-					<div class="input-group-prepend">
-						<label class="input-group-text" for="inputGroupSelect01">Gender</label>
-					</div>
-					<select class="custom-select" id="inputGroupSelect01">
-						<option selected>Choose...</option>
-						<option value="1">Male</option>
-						<option value="2">Female</option>
-						<option value="3">Other</option>
-					</select>
-				</div>
-				<span>Department : </span>
-				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="science">
-					<label class="form-check-label" for="inlineRadio1">Scince</label>
-				  </div>
-				  <div class="form-check form-check-inline">
-					<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Arts">
-					<label class="form-check-label" for="inlineRadio2">Arts</label>
-				  </div>
-				  <div class="form-check form-check-inline">
-					<input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Commerce">
-					<label class="form-check-label" for="inlineRadio3">Commerce</label>
-				  </div>
+				
 
 				<div class="form-group">
 					<label for="password">Password *</label>
-					<input type="password" class="form-control" id="password" placeholder="Enter Password">
+					<input type="password" class="form-control" id="password" placeholder="Enter Password Min-8digit" formControlName="password">
+					<span *ngIf="password && password.invalid && password.touched" style="color: red;">Invalid password</span>
 					<br>
 
 				</div>
 				<div class="d-flex justify-content-between align-items-center">
 					<div class="form-group d-flex justify-content-start">
-						<button type="submit" class="btn btn-primary">Submit</button>
+						<button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary">Submit</button>
 					</div>
 					<div id="emailHelp" class=" form-text text-center mb-5 text-dark">Already registered? <a
 							routerLink="login" class="text-dark fw-bold">Login</a>
