--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light  navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Student</a>
+    <a class="navbar-brand" href="#"> _RGPV</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,20 +9,26 @@
           <a class="nav-link" routerLink="">Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" routerLink="dashboard">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" routerLink="about">About Us</a>
         </li>
       </ul>
       
     </div>
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
-            <li class="nav-item">
+          <li class="nav-item" *ngIf="log()" (click)="logOut()" routerLink="login">
+            <p class="nav-link" style="color:cornsilk;">Welcome, {{getUser()}}</p>
+          </li>
+          <li class="nav-item" *ngIf="log()" (click)="logOut()" routerLink="login">
+            <a class="nav-link" routerLink="login">LogOut</a>
+          </li> 
+            <li class="nav-item" *ngIf="!log()">
                 <a class="nav-link" routerLink="login">Login</a>
               </li>
-              <li class="nav-item " style="float: right;">
+              <li class="nav-item " *ngIf="!log()" style="float: right;">
                   <a class="nav-link" routerLink="register">Registration</a>
                 </li>
         </ul>
