--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,4 @@
 @import '~ag-grid-community/styles/ag-grid.css';
 @import '~ag-grid-community/styles/ag-theme-alpine.css';
+@import '~ag-grid-community/styles/ag-theme-balham.css';
+@import '~ag-grid-community/styles/ag-theme-material.css';
