--- a/src/app/add-student/add-student.component.html
+++ b/src/app/add-student/add-student.component.html
@@ -52,12 +52,20 @@
 					<br>
 
 				</div>	   
-				  <div class="form-group">
+				  <!-- <div class="form-group">
 					<label for="address">Address *</label>
 					<input type="text" class="form-control" id="address" placeholder="Enter Address" formControlName="address">
 					<span *ngIf="address && address.invalid && address.touched" style="color: red;">Invalid address</span>
 					<br>
 
+				</div> -->
+				<div class="form-group">
+					<label>Location* :</label>
+					<select formControlName="address">
+						<option selected></option>
+						<option *ngFor="let continent of list" [ngValue]="continent.label">{{continent.label}}</option>
+					</select>
+					<span *ngIf="address && address.invalid && address.touched" style="color: red;">Invalid address</span>
 				</div>
 	
 				<div class="d-flex justify-content-between align-items-center">
