--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -40,12 +40,22 @@
 					<br>
 
 				</div> --> 
-				<div class="form-group">
+				<!-- <div class="form-group">
 					<label for="department">Gender *</label>
 					<input type="text" class="form-control" id="gender" placeholder="Enter gender" formControlName="gender">
 					<span *ngIf="gender && gender.invalid && gender.touched" style="color: red;">Invalid department</span>
 					<br>
+				</div> -->
+				<div class="form-group">
+					<label>Gender* :</label>
+					<select formControlName="gender">
+						<option selected></option>
+						<option *ngFor="let gender of list" [ngValue]="gender.label">{{gender.label}}</option>
+					</select>
+					<span *ngIf="gender && gender.invalid && gender.touched" style="color: red;">Invalid Gender</span>
 				</div>
+				<br>
+	
 				  
 				  <div class="form-group">
 					<label for="department">Department *</label>
